@@ -36,6 +36,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.UnsupportedEncodingException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URLDecoder;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
@@ -1607,11 +1608,12 @@ public class DefaultWebApplicationRequest extends ServletInputStream implements 
      * @throws IOException when an I/O error occurs.
      * @throws ServletException when a serious error occurs.
      */
+    @SuppressWarnings("unchecked")
     @Override
     public <T extends HttpUpgradeHandler> T upgrade(Class<T> handlerClass) throws IOException, ServletException {
         try {
-            upgradeHandler = handlerClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException ie) {
+            upgradeHandler = handlerClass.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException ie) {
             throw new ServletException(ie);
         }
         setUpgraded(true);
